tests/baselines/reference/for-of39.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of39.ts(1,19): error TS2345: Argument of type '[["", true], ["", 0]]' is not assignable to parameter of type 'Iterable<["", true]>'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '() => IterableIterator<["", true] | ["", 0]>' is not assignable to type '() => Iterator<["", true]>'.
      Type 'IterableIterator<["", true] | ["", 0]>' is not assignable to type 'Iterator<["", true]>'.
        Types of property 'next' are incompatible.
          Type '(value?: any) => IteratorResult<["", true] | ["", 0]>' is not assignable to type '(value?: any) => IteratorResult<["", true]>'.
            Type 'IteratorResult<["", true] | ["", 0]>' is not assignable to type 'IteratorResult<["", true]>'.
              Type '["", true] | ["", 0]' is not assignable to type '["", true]'.
                Type '["", 0]' is not assignable to type '["", true]'.
                  Type '0' is not assignable to type 'true'.


==== tests/cases/conformance/es6/for-ofStatements/for-of39.ts (1 errors) ====
    var map = new Map([["", true], ["", 0]]);
                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[["", true], ["", 0]]' is not assignable to parameter of type 'Iterable<["", true]>'.
!!! error TS2345:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2345:     Type '() => IterableIterator<["", true] | ["", 0]>' is not assignable to type '() => Iterator<["", true]>'.
!!! error TS2345:       Type 'IterableIterator<["", true] | ["", 0]>' is not assignable to type 'Iterator<["", true]>'.
!!! error TS2345:         Types of property 'next' are incompatible.
!!! error TS2345:           Type '(value?: any) => IteratorResult<["", true] | ["", 0]>' is not assignable to type '(value?: any) => IteratorResult<["", true]>'.
!!! error TS2345:             Type 'IteratorResult<["", true] | ["", 0]>' is not assignable to type 'IteratorResult<["", true]>'.
!!! error TS2345:               Type '["", true] | ["", 0]' is not assignable to type '["", true]'.
!!! error TS2345:                 Type '["", 0]' is not assignable to type '["", true]'.
!!! error TS2345:                   Type '0' is not assignable to type 'true'.
    for (var [k, v] of map) {
        k;
        v;
    }